--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build:openapi": "pnpm dlx tsx ./scripts/generate-docs.ts",
-    "prebuild": "pnpm build:openapi",
+    "build:api-doc": "pnpm dlx tsx ./scripts/generate-docs.ts",
+    "prebuild": "pnpm build:api-doc",
     "build": "next build",
     "dev": "next dev --turbo",
     "start": "next start",
@@ -58,6 +58,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.5.0",
     "postcss": "^8.5.6",
+    "prettier": "^3.8.1",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3"
   }
