--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,7 @@ services:
   docs:
     build:
       context: .
-      dockerfile: apps/docs/Dockerfile
+      dockerfile: Dockerfile
     environment:
       - NODE_ENV=development
       - NEXT_PUBLIC_APP_URL=http://localhost:3000
@@ -12,7 +12,7 @@ services:
       - "3000:3000"
     volumes:
       - ./apps/docs:/app/apps/docs
-      - ./apps/docs/diagrams:/app/apps/docs/diagrams
+      - ./apps/docs/arch/diagrams:/app/apps/docs/arch/diagrams
       - /app/apps/docs/.next
       - root_node_modules:/app/node_modules
       - docs_node_modules:/app/apps/docs/node_modules
